# DGHC

./: CMakeLists.txt  package.xml
include/dghc/: dghc_controller.hpp  dghc_controller_RAL.hpp  dghc_controller_alchemist.hpp  dghc_controller_demo.hpp  dghc_controller_fullbody.hpp
launch/: dghc_controller.launch  moca_teleop.launch  real_moca.launch  real_moca_RAL.launch  real_moca_alchemist.launch  real_moca_demo.launch
src/: dghc.cpp  mode_pub.cpp
src/88/: dghc_controller.cpp
src/RAL/: GHCProjections_RAL.cpp  dghc_RAL.cpp  dghc_controller_RAL.cpp  fsm_RAL.cpp  qb_interface.cpp  trajectoryMaker.cpp
src/alchemist/: dghc_alchemist.cpp  dghc_controller_alchemist.cpp  mode_pub_alchemist.cpp
src/demo/: dghc_controller_demo.cpp  dghc_demo.cpp  mode_pub_demo.cpp
src/fullbody/: GHCProjections_fullbody.cpp  dghc_controller_fullbody.cpp  dghc_fullbody.cpp  mode_pub_fullbody.cpp
