<?xml version="1.0"?>
<package format="2">
  <name>dghc</name>
  <version>0.0.0</version>
  <description>The DGHC package</description>

  
  <maintainer email="jaepill9@hanyang.ac.kr">jang</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>hrii_utils</depend>
  <depend>hrii_robot_msgs</depend>
  <depend>hrii_ra_interface</depend>
  <depend>hrii_mor_interface</depend>
  
  <build_depend>roslaunch</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>joint_state_publisher_gui</build_depend>
  <build_depend>pinocchio</build_depend>

  <build_depend>urdf</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>robot_state_publisher</build_depend>  

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>human_factor</build_depend>
  
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>joint_state_controller</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>pinocchio</build_export_depend>
  
  <exec_depend>urdf</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pinocchio</exec_depend>
  <exec_depend>human_factor</exec_depend>
  <export>
    <architecture_independent />
  </export>
</package>
